# beta-kde

./: .gitignore  LICENCE  MANIFEST.in  README.md  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
paper_validation/: compare_normalization.py  plot_convergence.py  test_sanity.py
src/beta_kde/: __init__.py  estimator.py
tests/: test_core.py  test_performance.py  test_sanity.py
