[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beta-kernel"
version = "0.1.0"
description = "Beta Kernel Density Estimation compatible with Scikit-learn"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name="Johan Hallberg Szabadvary", email="johan.hallberg.szabadvary@ju.se" },
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "matplotlib>=3.0",  # Optional, but used in plot methods
    "tqdm"              # Optional
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]